--- a/index.html
+++ b/index.html
@@ -12,50 +12,52 @@
 <title>Result Summary</title>
 </head>
 <body>
-    <div class="container">
-        <div class="result">
-            <h3>Your Result</h3>
-            <div class="circle">
-                <h1>76</h1>
-                <p>of 100</p>
+    <main>
+        <div class="container">
+            <div class="result">
+                <h3>Your Result</h3>
+                <div class="circle">
+                    <h1>76</h1>
+                    <p>of 100</p>
+                </div>
+                <h2>Great</h2>
+                <p>Your scored higher than 65% of the people who have taken these tests.</p>
             </div>
-            <h2>Great</h2>
-            <p>Your scored higher than 65% of the people who have taken these tests.</p>
+            <div class="summary">
+                <h3>Summary</h3>
+                <ul>
+                    <li class="reaction">
+                        <div class="text">
+                            <i class="fa-solid fa-bolt"></i>
+                            Reaction
+                        </div>
+                        <span><span class="percent">80 </span>/ 100</span>
+                    </li>
+                    <li class="memory">
+                        <div class="text">
+                            <i class="fa-solid fa-brain"></i>
+                            Memory 
+                        </div>
+                        <span><span class="percent">92 </span>/ 100</span>
+                    </li>
+                    <li class="verbal">
+                        <div class="text">
+                            <i class="fa-solid fa-circle-minus"></i>
+                            Verbal 
+                        </div>
+                        <span><span class="percent">61 </span>/ 100</span> 
+                    </li>
+                    <li class="visual">
+                        <div class="text">
+                            <i class="fa-regular fa-eye"></i>
+                            Visual 
+                        </div>
+                        <span><span class="percent">72 </span>/ 100</span> 
+                    </li>
+                </ul>
+                <a href="#">Continue</a>
+            </div>
         </div>
-        <div class="summary">
-            <h3>Summary</h3>
-            <ul>
-                <li class="reaction">
-                    <div class="text">
-                        <i class="fa-solid fa-bolt"></i>
-                        Reaction
-                    </div>
-                    <span><span class="percent">80 </span>/ 100</span>
-                </li>
-                <li class="memory">
-                    <div class="text">
-                        <i class="fa-solid fa-brain"></i>
-                        Memory 
-                    </div>
-                    <span><span class="percent">92 </span>/ 100</span>
-                </li>
-                <li class="verbal">
-                    <div class="text">
-                        <i class="fa-solid fa-circle-minus"></i>
-                        Verbal 
-                    </div>
-                    <span><span class="percent">61 </span>/ 100</span> 
-                </li>
-                <li class="visual">
-                    <div class="text">
-                        <i class="fa-regular fa-eye"></i>
-                        Visual 
-                    </div>
-                    <span><span class="percent">72 </span>/ 100</span> 
-                </li>
-            </ul>
-            <a href="#">Continue</a>
-        </div>
-    </div>
+    </main>
 </body>
 </html>
